# konstanta-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_ASSISTANT.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ca52bf72f0d1_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: cache.py  constants.py  deps.py  http_cache.py  middleware.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  application.py  category.py  job.py  mixins.py  review.py  staff.py  subscription.py  user.py
backend/app/routers/: ai.py  applications.py  candidate_auth.py  categories.py  health.py  jobs.py  reviews.py  staff_auth.py  subscriptions.py  websocket.py
backend/app/schemas/: ai.py  application.py  auth.py  category.py  job.py  review.py  subscription.py
backend/app/services/: application_service.py  auth_service.py  category_service.py  job_service.py  notification_service.py  review_service.py  serializers.py  storage.py  subscription_service.py  telegram.py  telegram_gateway.py
backend/app/ws/: manager.py
backend/tests/: conftest.py
backend/tests/e2e/: test_ai_endpoint.py  test_applications.py  test_auth.py  test_caching.py  test_categories.py  test_health.py  test_jobs.py  test_subscriptions.py
backend/tests/unit/: test_ai.py  test_application_lock.py  test_config.py  test_constants.py  (+3 more)
(+40 files in other folders)
